fix: remove preview flag